# basic-video-mapper

./: .gitignore  AGENTS.md  Architecture.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
clients/commandlineclient/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  DartConfiguration.tcl  projection_core_tests
core/src/projection/core/: CoreInit.cpp  CoreInit.h  Cue.cpp  Cue.h  Enums.h  Feed.cpp  Feed.h  Ids.h  Project.cpp  Project.h  RendererProtocol.cpp  RendererProtocol.h  Scene.cpp  Scene.h  Serialization.cpp  Serialization.h  Surface.cpp  Surface.h  Validation.cpp  Validation.h
core/tests/: CoreInit_test.cpp  FeedConfig_test.cpp  FeedSceneSurfaceCue_test.cpp  IdsEnums_test.cpp  Project_test.cpp  RendererProtocol_LoadSceneDefinition_test.cpp  RendererProtocol_test.cpp  Serialization_test.cpp  Validation_test.cpp
renderer/: CMakeLists.txt  DartConfiguration.tcl  renderer_app  renderer_tests
renderer/src/: RenderState.cpp  RenderState.h  hello_main.cpp  main.cpp  ofApp.cpp  ofApp.h  of_compat.h
renderer/src/net/: RendererClient.cpp  RendererClient.h  RendererServer.cpp  RendererServer.h
renderer/src/util/: InteractionUtils.cpp  InteractionUtils.h
renderer/tests/: InteractionUtils_test.cpp  RenderState_test.cpp  RendererClient_test.cpp  RendererServer_test.cpp
scripts/: build_all.sh  mapper.sh  renderer.sh  server.sh  testrun.sh
server/: CMakeLists.txt  Dockerfile
server/src/: Config.cpp  Config.h  ServerApp.cpp  ServerApp.h  main.cpp
server/src/db/: SchemaMigrations.cpp  SchemaMigrations.h  SqliteConnection.cpp  SqliteConnection.h
server/src/http/: HttpServer.cpp  HttpServer.h
server/src/renderer/: RendererClient.cpp  RendererClient.h  RendererRegistry.cpp  RendererRegistry.h
server/src/repo/: CueRepository.cpp  CueRepository.h  FeedRepository.cpp  FeedRepository.h  ProjectRepository.cpp  ProjectRepository.h  SceneRepository.cpp  SceneRepository.h  SurfaceRepository.cpp  SurfaceRepository.h
server/tests/: Config_test.cpp  DbSurfaces_test.cpp  Db_test.cpp  DemoFlow_test.cpp  HttpApi_test.cpp  HttpRendererIntegration_test.cpp  HttpScenesSurfaces_test.cpp  ProjectRepository_test.cpp  RendererClient_LoadSceneDefinition_test.cpp  RendererClient_test.cpp  RendererRegistry_test.cpp  Repository_test.cpp  SchemaMigrations_test.cpp  ServerApp_test.cpp  SqliteConnection_test.cpp  SurfaceRepository_test.cpp
